// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Text
    classes={
      Object {
        "bottomBase": "bottomBase",
        "bottomLarge": "bottomLarge",
        "bottomMedium": "bottomMedium",
        "bottomSmall": "bottomSmall",
        "bottomTiny": "bottomTiny",
        "bottomXLarge": "bottomXLarge",
        "bottomXTiny": "bottomXTiny",
        "center": "center",
        "disabled": "disabled",
        "error": "error",
        "heading": "heading",
        "headline": "headline",
        "hero": "hero",
        "highEmphasis": "highEmphasis",
        "info": "info",
        "large": "large",
        "left": "left",
        "link": "link",
        "lowEmphasis": "lowEmphasis",
        "micro": "micro",
        "midEmphasis": "midEmphasis",
        "primary": "primary",
        "right": "right",
        "secondary": "secondary",
        "small": "small",
        "standard": "standard",
        "strong": "strong",
        "subheading": "subheading",
        "success": "success",
        "text": "text",
        "topBase": "topBase",
        "topLarge": "topLarge",
        "topMedium": "topMedium",
        "topSmall": "topSmall",
        "topTiny": "topTiny",
        "topXLarge": "topXLarge",
        "topXTiny": "topXTiny",
        "warning": "warning",
        "white": "white",
      }
    }
    tag="p"
  >
    Text
  </Text>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Text",
      "className": "text standard highEmphasis",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": "Text",
    "type": "p",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Text",
        "className": "text standard highEmphasis",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": "Text",
      "type": "p",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Text styles matches the snapshot 1`] = `
Object {
  "bottomBase": Object {
    "marginBottom": 24,
  },
  "bottomLarge": Object {
    "marginBottom": 48,
  },
  "bottomMedium": Object {
    "marginBottom": 32,
  },
  "bottomSmall": Object {
    "marginBottom": 16,
  },
  "bottomTiny": Object {
    "marginBottom": 8,
  },
  "bottomXLarge": Object {
    "marginBottom": 64,
  },
  "bottomXTiny": Object {
    "marginBottom": 4,
  },
  "center": Object {
    "textAlign": "center",
  },
  "disabled": Object {
    "color": "#dddddd",
  },
  "error": Object {
    "color": "#db3737",
  },
  "heading": Object {
    "fontSize": 22,
    "fontWeight": 600,
    "lineHeight": "32px",
  },
  "headline": Object {
    "@media screen and (min-width:768px)": Object {
      "fontSize": 36,
      "lineHeight": "48px",
    },
    "fontSize": 28,
    "lineHeight": "32px",
  },
  "hero": Object {
    "@media screen and (min-width:768px)": Object {
      "fontSize": 57,
      "lineHeight": "72px",
    },
    "fontSize": 28,
    "lineHeight": "32px",
  },
  "highEmphasis": Object {
    "color": "#222222",
  },
  "info": Object {
    "color": "#5736ab",
  },
  "large": Object {
    "fontSize": 16,
    "lineHeight": "24px",
  },
  "left": Object {
    "textAlign": "left",
  },
  "link": Object {
    "color": "#0946CB",
  },
  "lowEmphasis": Object {
    "color": "#aaaaaa",
  },
  "micro": Object {
    "fontSize": 10,
    "lineHeight": "16px",
  },
  "midEmphasis": Object {
    "color": "#777777",
  },
  "primary": Object {
    "color": "#083cae",
  },
  "right": Object {
    "textAlign": "right",
  },
  "secondary": Object {
    "color": "#f13465",
  },
  "small": Object {
    "fontSize": 12,
    "lineHeight": "16px",
  },
  "standard": Object {
    "fontSize": 14,
    "lineHeight": "24px",
  },
  "strong": Object {
    "fontWeight": 600,
  },
  "subheading": Object {
    "fontSize": 16,
    "fontWeight": 600,
    "lineHeight": "24px",
  },
  "success": Object {
    "color": "#009537",
  },
  "text": Object {
    "fontFamily": "'Open Sans', sans-serif",
    "fontStyle": "normal",
    "fontWeight": 400,
    "letterSpacing": 0,
    "margin": 0,
  },
  "topBase": Object {
    "marginTop": 24,
  },
  "topLarge": Object {
    "marginTop": 48,
  },
  "topMedium": Object {
    "marginTop": 32,
  },
  "topSmall": Object {
    "marginTop": 16,
  },
  "topTiny": Object {
    "marginTop": 8,
  },
  "topXLarge": Object {
    "marginTop": 64,
  },
  "topXTiny": Object {
    "marginTop": 4,
  },
  "warning": Object {
    "color": "#ffc549",
  },
  "white": Object {
    "color": "#ffffff",
  },
}
`;

exports[`TextJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED>
    Text
  </UNDEFINED>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
